--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,13 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <exclude>com/openclassrooms/paymybuddy/model/**/*</exclude>
+                        <exclude>com/openclassrooms/paymybuddy/PayMyBuddyApplication.class</exclude>
+
+                    </excludes>
+                </configuration>
                 <executions>
                     <execution>
                         <goals>
@@ -76,7 +83,7 @@
                     </execution>
                     <execution>
                         <id>report</id>
-                        <phase>prepare-package</phase>
+                        <phase>test</phase>
                         <goals>
                             <goal>report</goal>
                         </goals>
